[package]
name = "img-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
colored = {version = "*", optional = true}
egui = {version = "*", optional = true}
eframe = {version = "*", optional = true}
rfd = {version = "*", optional = true}

[features]
default = []
gui = ["dep:eframe", "dep:egui", "dep:rfd"]
headless = ["dep:colored"]